fix ICM meteogram vision reading
- read gusts from red dashes instead of blue ones
- describe the real panel order including the pressure panel
- read time from the top CEST/CET axis instead of the bottom UTC one
- reverse direction arrows, ICM draws them as downwind vectors
- move unit and date conversion from the model into Java
- extract pressure and cloud cover, previously always zero
- request the English meteogram so day labels match the output format
- strip markdown fences and validate points before caching them